--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
+  background-image: url("./cover.png");
+  position: relative;
+}
+
+body:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 50;
+  background: #343a408a;
+}
+
+h1, h2 {
+  text-shadow: 0 0 3px black;
+}
+
+.taskContainer {
+  max-width: 700px;
+  min-height: 100vh;
+  margin: 0 auto;
+  position: relative;
+  z-index: 100;
+  padding: 2rem 20px;
+  background: rgba(19, 19, 19, 0.07);
+  border-left: 3px solid rgba(0, 0, 0, 0.11);
+  border-right: 3px solid rgba(0, 0, 0, 0.11);
+  box-shadow: 0 0 19px black;
+}
+
+.list-group {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.list-group-item {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 767px) {
+  .container {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  .taskContainer {
+    max-width: 100%;
+    padding: 2rem 10px;
+    margin: 0 3px;
   }
 }
